--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 html, body {
-  background-color: #eaeaea;
+  background-color: #757596;
+}
+#wrapper {
+  width: 80%;
+  margin: 40px auto 40px auto;
+  background-color: #bbeae3;
+  height: 800px;
+  box-shadow: 7px 7px 8px #b54657, 12px 12px 8px #c94660;
+  border: 4px #774044 solid;
 }
